src/controllers/trustpub/snapshots/crates_io__controllers__trustpub__emails__tests__config_created_email_gitlab_with_environment-2.snap
---
source: src/controllers/trustpub/emails.rs
expression: rendered.body_text
---
Hello octocat!

You added a new "Trusted Publishing" configuration for GitLab CI to your crate "my-crate". Trusted publishers act as trusted users and can publish new versions of the crate automatically.

This configuration allows the workflow file at https://gitlab.com/rust-lang/my-crate/-/blob/HEAD/.gitlab-ci.yml to publish new versions of this crate. The workflow must use the `production` environment.

If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.

If you are unable to revert the change and need to do so, you can email help@crates.io for assistance.

--
The crates.io Team
