src/controllers/trustpub/snapshots/crates_io__controllers__trustpub__emails__tests__config_created_email_with_environment-2.snap
---
source: src/controllers/trustpub/emails.rs
expression: rendered.body_text
---

Hello octocat!

You added a new "Trusted Publishing" configuration for GitHub Actions to your crate "my-crate". Trusted publishers act as trusted users and can publish new versions of the crate automatically.

This configuration allows the workflow file at https://github.com/rust-lang/rust/blob/HEAD/.github/workflows/publish.yml to publish new versions of this crate. The workflow must use the `production` environment (https://github.com/rust-lang/rust/deployments/production).

If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.

If you are unable to revert the change and need to do so, you can email help@crates.io for assistance.

--
The crates.io Team
