src/controllers/trustpub/snapshots/crates_io__controllers__trustpub__emails__tests__config_deleted_email-2.snap
---
source: src/controllers/trustpub/emails.rs
expression: rendered.body_text
---
Hello octocat!

You removed a "Trusted Publishing" configuration for GitHub Actions from your crate "my-crate".

Trusted Publishing configuration:

- Repository owner: rust-lang
- Repository name: rust
- Workflow filename: publish.yml
- Environment: (not set)

If you did not make this change and you think it was made maliciously, you can email help@crates.io for assistance.

--
The crates.io Team
