src/controllers/trustpub/snapshots/crates_io__controllers__trustpub__emails__tests__config_deleted_email_different_recipient-2.snap
---
source: src/controllers/trustpub/emails.rs
expression: rendered.body_text
---
Hello team-member!

crates.io user octocat removed a "Trusted Publishing" configuration for GitHub Actions from a crate that you manage ("my-crate").

The removed configuration was for the workflow file at https://github.com/rust-lang/rust/blob/HEAD/.github/workflows/publish.yml.

If you did not make this change and you think it was made maliciously, you can email help@crates.io for assistance.

--
The crates.io Team
